# TheShade

./: .gitignore  CMakeLists.txt  a.out  backendstartup.sh  main  main.c  main.cpp
templates/: blog.html
